changed navbar to fixed and added navbar height variable, also removed hover effects until i can figure out what's causing weird nav filter distortions on bottom of navbar

--- a/src/assets/css/Gallery.module.css
+++ b/src/assets/css/Gallery.module.css
@@ -1,7 +1,8 @@
 .photoBody {
     max-width: 120rem;
     margin-inline: auto;
-    padding-top: 1.6rem;
+    padding-top: calc(var(--headerheight) + 1.6rem);
+    overflow: clip;
 }
 
 .photoContainer {
@@ -23,7 +24,7 @@ picture {
     border-radius: 1.4rem;
     width: 100%;
     aspect-ratio: 1 / 1;
-    overflow: hidden;
+    overflow: clip;
     margin-bottom: 1rem;
 }
 
